# compare_rust_python

./: README.md
python_app/: .gitignore  Dockerfile  docker-compose.yml  requirements.txt
python_app/app/: config.py  database.py  main.py  utils.py
python_app/app/core/: log_config.py
python_app/app/github/: github_client.py  github_client_dependency.py
python_app/app/routers/: diff.py
python_app/app/schemas/: schemas_diff.py
python_app/app/serializers/: diff_serializers.py
python_app/app/tests/: test_compare_dicts.py
rust_app/: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
rust_app/src/: db.rs  logger.rs  main.rs  models.rs
rust_app/src/diff_router/: mod.rs
rust_app/src/github/: mod.rs
rust_app/src/github_router/: mod.rs
rust_app/src/utils/: mod.rs
