[package]
name = "compare_configs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_cors = "0.6"
dotenv = "0.15.0"
octocrab = "0.32.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
fern = "0.6"
env_logger = "0.9.0"
anyhow = "1.0.42"
serde = { version = "1.0", features = ["derive"] }
bson = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }
mongodb = "2.0.0"
base64 = "0.13.0"
itertools = "0.10.0"
serde_yaml = "0.8"



[dependencies.rocket]
version = "0.5.0"
features = ["json"]
